--- a/src/sass/1-base/_colors.scss
+++ b/src/sass/1-base/_colors.scss
@@ -9,7 +9,8 @@ $body-color: #fff !important;
 $theme-colors: (
   "primary":  #f0a33e,
   "secondary": #ef3e32,
-  "accent": #753191
+  "accent": #753191,
+  "transparent": transparent
 );
 
 
