--- a/src/sass/2-layouts/_right-container.scss
+++ b/src/sass/2-layouts/_right-container.scss
@@ -1,6 +1,6 @@
 
 .right-container {
-    height: 762px;
+    min-height: 762px;
     padding-top: 50px;
     padding-bottom: 50px;
     display: flex;
