--- a/src/sass/2-layouts/layouts.scss
+++ b/src/sass/2-layouts/layouts.scss
@@ -3,5 +3,7 @@
 @import './nav';
 @import './right-container';
 @import './article';
+@import './services-section'; 
+@import './post-service-section';      
 
 @import '../../../node_modules/bootstrap/scss/bootstrap-grid.scss';
