--- a/src/sass/3-modules/_buttons.scss
+++ b/src/sass/3-modules/_buttons.scss
@@ -17,6 +17,10 @@ $btn-font-family: "Montserrat", sans-serif;
         text-transform: capitalize;
     }
 
+    &.border-white {
+        border: 1px solid #fff;
+    }
+
     &.btn-primary {
         color: #fff;
         
