--- a/src/sass/2-layouts/layouts.scss
+++ b/src/sass/2-layouts/layouts.scss
@@ -4,6 +4,8 @@
 @import './right-container';
 @import './article';
 @import './services-section'; 
-@import './post-service-section';      
+@import './post-service-section';
+@import './pre-footer-section';
+@import './footer';      
 
 @import '../../../node_modules/bootstrap/scss/bootstrap-grid.scss';
