--- a/src/sass/3-modules/_buttons.scss
+++ b/src/sass/3-modules/_buttons.scss
@@ -1,6 +1,7 @@
 // $input-btn-padding-y:         .375rem !default;
 $btn-padding-x-sm: 26px ;
 $btn-padding-x: 40px;
+$btn-padding-y: 10px;
 
 $btn-border-radius: 50px;
 $btn-border-radius-sm: 50px;
@@ -12,6 +13,7 @@ $btn-font-family: "Montserrat", sans-serif;
 .btn {
 
     text-transform: uppercase;
+    font-size: 16px;
 
     &.btn-sm {
         text-transform: capitalize;
