--- a/src/sass/3-modules/_carousel.scss
+++ b/src/sass/3-modules/_carousel.scss
@@ -164,6 +164,9 @@ $carousel-control-hover-opacity: 1;
     &#service7 {
         background-image: url('../images/event-marketing-pr.png');
     }
+    &#service9 {
+        background-image: url('../images/travel-transportation.jpeg');
+    }
     &#service2 {
         background-image: url('../images/venue-selection.png');
     }
@@ -177,7 +180,7 @@ $carousel-control-hover-opacity: 1;
         background-image: url('../images/entertainment-talent-booking.png');
     }
     &#service10 {
-        background-image: url('../images/event-consulting.png');
+        background-image: url('../images/post-production.png');
     }
 
     &:after {
